--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Tinashe
-middle_name: R.
+middle_name:
 last_name: Handina
 email: thandina@caltech.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
