--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,11 @@ middle_name:
 last_name: Handina
 email: thandina@caltech.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+footer_text: Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
 keywords:  # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: TH # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://thandina.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
